src/styles/blocks/_table.scss
.vz-table {
  border-collapse: collapse;
  margin: 0 auto 2rem auto;
  text-align: left;
  width: 100%;

    thead {
    font-size: 87.5%;
  }

  tbody tr:nth-child(even) {
    transition: all 0.15s ease-out;
    background-color: rgba(black, .05);
  }

  tbody tr:nth-child(odd) {
    transition: all 0.2s ease-out;
  }

  tbody tr:hover {
    background-color: rgba(black, .1);

    .vz-table__actions a {
      opacity: 1;
    }
  }

  td, th {
    padding: .75rem 1rem;
  }

  th[scope=row] {
    text-align: start;
  }

  th[scope=col] {
    box-shadow: 0 1px 0 rgba(black, .1);;
    background-color: #f5f5f5;
    padding-bottom: 1rem;
    position: sticky;
    top: 0;
  }

  .vz-table__actions {
    white-space: nowrap;
  }

  .vz-table__actions a {
    transition: all 0.15s ease-out;
    margin-right: .75rem;
    color: #007bff;
    opacity: 0;
  }

  .vz-table__actions a:hover {
    color: #0054af;
  }
}

.vz-table--compact {
  td, th {
    padding: .25rem .5rem;
  }
}

